# GTsimulation

./: .gitignore  CMakeLists.txt  GT.py  GTaddpath.m  GeneratorCR.m  GetGCRflux.m  GetTrajectoryInEMField.m  Interface.py  PlotTrack.py  PlotTrackEarth.py  PlotTrackGalaxy.py  PlotTrackHelio.py  README.md  RunGT.py  RunGTInterface.py  RunGetTrajectoryInEMField.m  SetGetTrajectoryInEMField.m  consts.py  particle.py  pyproject.toml  requirements.txt  setup.py
Data/PAML3/: PamParticle_212.mat
ElectricFields/: general_field.py
GT/: BunemanBoris.py  GT.py  __init__.py  break_code.py  consts.py  functions.py
GT/Algos/: BunemanBoris.py  RungeKutta.py  __init__.py
GTBfieldParam/: GetGTBfieldParamG.m  GetGTBfieldParamH.m  GetGTBfieldParamM.m  GetGTBfieldParamP.m
GTfunctions/: GTclear.m  GetGTantiparticle.m  GetGTfile.m  GetGTparticle.m  GetGTtrack.m  GetTimeStep.m  PlotGTtrack.m  RefreshGTparam.m  SetGTparam.m  SetGTparticle.asv  SetGTparticle.m
GTfunctions/Physics/: ChemCompRedefine.m  DateTimeRedefine.m  GetSolMag.m  YDS.m  vecRotMat.m
GTfunctions/TNode/: TList.m  TNode.m
GTmaginitosphere/: BCFullRevolution.m  FindParticleOrigin.m  GetGTtrackParam.m
GTparam/: GTparam_test_center.mat
GTparticle/: GTparticle_test_center.mat
GTtrack/: GTtrack_test_center.mat
GeantInteraction/: functions.py
Global/: __init__.py  codes.py  consts.py  functions.py  regions.py
HowTo/: GT_HowTo.pptx
Interaction/: Atmosphere  DecayGenerator  G4functions.py  GenSynchCounter.py  MatterLayer  RadLossStep.py  SynchrotronEmission.py  __init__.py  functions.py  settings.py
Interaction/G4source/: vis.mac
Interaction/G4source/Atmosphere/: Atmosphere.cc  CMakeLists.txt  vis.mac
Interaction/G4source/Atmosphere/include/: ActionInitialization.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh  TrackingAction.hh  nrlmsise-00.hh
Interaction/G4source/Atmosphere/src/: ActionInitialization.cc  AtmosphereParameterisation.cc  DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  TrackingAction.cc
Interaction/G4source/MatterLayer/: CMakeLists.txt  MatterLayer.cc
Interaction/G4source/MatterLayer/include/: ActionInitialization.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh  SteppingAction.hh
Interaction/G4source/MatterLayer/src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc  SteppingAction.cc
MagneticFields/: AbsBfield.py  Uniform.py  __init__.py  magnetic_field.py
MagneticFields/Galaxy/: JF12mod.py  UF23.py  __init__.py
MagneticFields/Heliosphere/: Parker.py  ParkerUniform.py  Uniform.py  UniformHelio.py  __init__.py
MagneticFields/Magnetosphere/: Additions.py  Dipole.py  FitIGRF.py  Gauss.py  HarmonicCoeffsIGRF.mat  HarmonicCoeffsIGRF.npy  Summary.py  Summed.py  Tsyganenko.py  __init__.py
Medium/: __init__.py  general_medium.py  vacuum.py
Medium/Galaxy/: InterstellarGas.py  __init__.py
Medium/Magnetosphere/: GTiri2016.py  GTnrlmsis.py  GTnrlmsise00.py  GTnrmlsise00.py  MagnetoshpereMedium.py  __init__.py
PAML3/: GetPAML3data.m
Particle/: Flux.py  GeneratorCR.py  GetNucleiProp.py  NucleiProp.py  Particle.py  __init__.py  functions.py
Particle/Generators/: Distributions.py  Spectrums.py  __init__.py
Scripts/: HelioAnalysis.py  draw_tools.py  npy2mat.py
Scripts/Galaxy/: cut_off.py  vis.py
Scripts/Heliosphere/: DataComparision.py  Diff_file.py  Diffusion.py  DiffusionField.py  HelioAnalysis.py  Visualize.py  misc.py
docs/: Examples.Galaxy.rst  Examples.Heliosphere.rst  Examples.Magnetosphere.rst  GT.Algos.rst  GT.rst  Global.rst  Interaction.rst  MagneticFields.Heliosphere.rst  MagneticFields.Magnetosphere.rst  MagneticFields.rst  Medium.Galaxy.rst  Medium.Magnetosphere.rst  Medium.rst  Particle.Generators.rst  Particle.rst  addons.rst  conf.py  documentation.rst  index.rst  modules.rst
docs/_autosummary/: Global.codes.BreakCode.rst  Global.codes.BreakIndex.rst
docs/examples/: galaxy.rst  general.rst  heliosphere.rst  magnetosphere.rst
docs/user_guide/: getting_started.rst  magnetic_field.rst  medium.rst  particle_pusher.rst  simulation_output.rst
examples/: adiabatic_losses.ipynb  backtracing.ipynb  deflection_in_galaxy.ipynb  dipole_field.ipynb  geomagnetic_cutoff.ipynb  interaction_probability.ipynb  trapped_particles.ipynb
examples/benchmarks/: synchrotron_emission.py  uniform_electric_field.py
medium/: general_medium.py  vacuum.py
medium/atmosphere/: gt_nrmlsise00.py
particle/: GetNucleiProp.py  Particle.py
particle/GeneratorCR/: ConvertR2T.py  ConvertT2R.py  Flux.py  GeneratorCR.py
scripts/: PlotTrackEarth.py  PlotTrackGalaxy.py  PlotTrackHelio.py
scripts/Galaxy/: cut_off.py  vis.py
scripts/Heliosphere/: DataComparision.py  HelioAnalysis.py  Visualize.py  adiabatic_losses.py
src/gtsimulation/: GT.py  __init__.py  _simulator.py  functions.py
src/gtsimulation/Interaction/G4source/Atmosphere/: CMakeLists.txt
src/gtsimulation/Interaction/G4source/Atmosphere/include/: AtmosphereParameterisation.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  TrackingAction.hh
src/gtsimulation/Interaction/G4source/Atmosphere/src/: TrackingAction.cc  nrlmsise-00.cc
src/gtsimulation/Interaction/G4source/DecayGenerator/: CMakeLists.txt
src/gtsimulation/Interaction/G4source/DecayGenerator/include/: PrimaryGeneratorAction.hh
src/gtsimulation/Interaction/G4source/DecayGenerator/src/: DetectorConstruction.cc  PhysicsList.cc  TrackingAction.cc
src/gtsimulation/Interaction/G4source/MatterLayer/: CMakeLists.txt  MatterLayer.cc
src/gtsimulation/Interaction/G4source/MatterLayer/include/: ActionInitialization.hh  DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SimConfig.hh  StackingAction.hh  TrackingAction.hh
src/gtsimulation/Interaction/G4source/MatterLayer/src/: ActionInitialization.cc  DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc  TrackingAction.cc
standalone_functions/: BfieldAbs.m  mConstants.m  mUnits.m
updates/: BfieldAbs.m
user_functions/: MyBCFunction.m  MyFuncSaveGTCondition.m  testBC.m
(+436 files in other folders)
