[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "gtsimulation"
version = "0.1.0"
dependencies = [
  "numpy~=2.1.3",
  "numba~=0.61.0",
  "scipy~=1.15.2",
  "pyproj~=3.7.1",
  "particle>=0.25.4",
  "pymsis~=0.9.0",
  "iri2016~=1.11.1",
  "matplotlib~=3.7.1",
  "mpld3~=0.5.10",
  "tqdm~=4.65.0",
  "plotly~=5.18.0",
  "pillow>=10.3.0"
]
requires-python = ">=3.10"
authors = [
  {name = "Andrey Mayorov", email = "agmayorov@gmail.com"},
  {name = "Norayr Galikyan"},
  {name = "Vladislav Golubkov"},
  {name = "Rustam Yulbarisov"},
  {name = "Andrey Dyagilev"}
]
description = "Software for calculations of particle's propagation through the electromagnetic fields and mediums in space."
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICENSE"]