[build-system]
requires = ["scikit-build-core", "ninja", "pybind11>=2.10"]
build-backend = "scikit_build_core.build"

[project]
name = "gtsimulation"
version = "0.1.0"
dependencies = [
  "numpy~=2.1.3",
  "numba~=0.61.0",
  "scipy~=1.15.2",
  "pyproj~=3.7.1",
  "particle>=0.25.4",
  "pymsis~=0.9.0",
]
requires-python = ">=3.10"
authors = [
  {name = "Andrey Mayorov", email = "agmayorov@gmail.com"},
  {name = "Norayr Galikyan"},
  {name = "Vladislav Golubkov"},
  {name = "Rustam Yulbarisov"},
  {name = "Andrey Dyagilev"}
]
description = "Software for calculations of particle's propagation through the electromagnetic fields and mediums in space."
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICENSE"]

[project.urls]
Documentation = "https://spacephysics.mephi.ru/GTsimulation/"
Source = "https://github.com/agmayorov/GTsimulation"

[tool.scikit-build]
cmake.args = ["-G", "Ninja"]
